--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,67 +1,40 @@
 {
-    "tasks": [
+	"tasks": [
 		{
+			// 실행하는 task type
 			"type": "cppbuild",
-			"label": "C/C++: gcc-9 활성 파일 빌드",
-			"command": "/usr/bin/gcc-9",
+			// task의 label (launch.json에서 연결할 때 사용이 됨)
+			"label": "C/C++: gcc build active file",
+			// 실행을 하게 되는 명령어
+			"command": "/usr/bin/gcc",
+			// 명령어에 대한 인자
 			"args": [
+				// *중요* gcc 컴파일을 할 때 디버깅을 가능하게 만들어 주는 옵션
 				"-g",
+				// vscode에서 제공하는 변수 디버깅을 시작하는 시점에서 focus하는 파일의 이름이 들어옴
 				"${file}",
 				"-o",
+				// ${fileDirname} : 디버깅을 시작하는 시점에서 focus하는 파일의 경로가 들어옴
+				// ${fileBasenameNoExtension} : 디버깅을 시작하는 시점에서 focus하는 파일의 확장자를 제외한 이름이 들어옴
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
 			"options": {
-				"cwd": "${fileDirname}"
+				// 작업을 진행하는 경로
+				"cwd": "/usr/bin"
 			},
+			// task 진행시 오류 발생하는 정보 연결 지정자
 			"problemMatcher": [
+				// $tsc, $go 등 다양한 언어를 지원함
 				"$gcc"
 			],
+			// 작업에 대한 group 정보
 			"group": {
 				"kind": "build",
 				"isDefault": true
 			},
-			"detail": "디버거에서 생성된 작업입니다."
-		},
-		{
-			"type": "cppbuild",
-			"label": "C/C++: gcc-9 활성 파일 빌드",
-			"command": "/usr/bin/gcc-9",
-			"args": [
-				"-fdiagnostics-color=always",
-				"-g",
-				"${file}",
-				"-o",
-				"${fileDirname}/${fileBasenameNoExtension}"
-			],
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"group": "build",
-			"detail": "컴파일러: /usr/bin/gcc-9"
-		},
-		{
-			"type": "cppbuild",
-			"label": "C/C++: gcc 활성 파일 빌드",
-			"command": "/usr/bin/gcc",
-			"args": [
-				"-fdiagnostics-color=always",
-				"-g",
-				"${file}",
-				"-o",
-				"${fileDirname}/${fileBasenameNoExtension}"
-			],
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"group": "build",
-			"detail": "컴파일러: /usr/bin/gcc"
+			// 작업에 대한 설명
+			"detail": "Generated task by Debugger"
 		}
 	],
-    "version": "2.0.0"
+	"version": "2.0.0"
 }
