--- a/BSQ/MAKEFILE
+++ b/BSQ/MAKEFILE
@@ -1,37 +1,41 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    MAKEFILE                                           :+:      :+:    :+:    #
+#    makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: byan <byan@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/10/22 20:50:22 by byan              #+#    #+#              #
-#    Updated: 2021/10/24 19:50:12 by byan             ###   ########seoul.kr   #
+#    Created: 2021/10/24 20:26:19 by byan              #+#    #+#              #
+#    Updated: 2021/10/24 21:01:20 by byan             ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS	= main.c ft_final.c ft_bsq.c ft_error.c ft_make.c ft_read.c
-OBJS    = ${SRCS:.c=.o}
-INCS	= ./
-NAME	= bsq_byan
-CC		= gcc
+SRC		= main.c ft_final.c ft_bsq.c ft_error.c ft_make.c ft_read.c
+SRCS	= ${addprefix ${PRE}, ${SRC}}
+OBJS	= ${SRCS:.c=.o}
+PRE		= ./srcs/
+HEAD	= ./includes/
+NAME	= bsq
 RM		= rm -f
-CFLAGS	= -Wall -Wextra -Werror
+GCC		= gcc
+CFLAGS	= -Wall -Werror -Wextra
+all:	${NAME}
 
-.c.o :
-	${CC} ${CFLAGS} -c $< -o ${<:.c=.o} -I ${INCS}
+dep:
+			gccmakedep $(INC) $(SRCS)
 
-${NAME} : ${OBJS}
-	${CC} ${CFLAGS} ${OBJS} -o ${NAME}
+.c.o:
+			${GCC} ${CFLAGS} -c -I ${HEAD} $< -o ${<:.c=.o}
 
-all : ${NAME}
+${NAME}:	${OBJS}
+			${GCC} ${CFLAGS} -o ${NAME} ${OBJS}
 
-run : ./${NAME}
+clean:
+			rm -f ${OBJS}
 
-clean :	${RM} ${OBJS}
+fclean:		clean
+			rm -f ${NAME}
 
-fclean : clean ${RM} ${NAME}
+re:			fclean all
 
-re : fclean all
-
-.PHONY: all clean fclean re .c.o
+.PHONY:		all clean fclean re
