--- a/BSQ/MAKEFILE
+++ b/BSQ/MAKEFILE
@@ -6,7 +6,7 @@
 #    By: byan <byan@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/24 20:26:19 by byan              #+#    #+#              #
-#    Updated: 2021/10/24 21:01:20 by byan             ###   ########seoul.kr   #
+#    Updated: 2021/10/25 12:55:06 by byan             ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,6 +16,7 @@ OBJS	= ${SRCS:.c=.o}
 PRE		= ./srcs/
 HEAD	= ./includes/
 NAME	= bsq
+ARGV	= no_argv1 no_argv2
 RM		= rm -f
 GCC		= gcc
 CFLAGS	= -Wall -Werror -Wextra
@@ -32,6 +33,7 @@ ${NAME}:	${OBJS}
 
 clean:
 			rm -f ${OBJS}
+			rm -f ${ARGV}
 
 fclean:		clean
 			rm -f ${NAME}
