--- a/BSQ/MAKEFILE
+++ b/BSQ/MAKEFILE
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    makefile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: byan <byan@student.42seoul.kr>             +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/24 20:26:19 by byan              #+#    #+#              #
-#    Updated: 2021/10/26 18:59:47 by byan             ###   ########seoul.kr   #
+#    Updated: 2021/10/26 22:02:51 by byan             ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
